# test_Weather

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  weather_data_2024-09-28_14-01-48.xlsx
src/: API_manager.py  DB_manager.py  Excel_manager.py  utils.py
